Standard never says 'method', say 'function' instead

--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -356,7 +356,7 @@ pointer types:
 <table>
 <thead>
 <tr>
-<th>Method</th>
+<th>Function</th>
 <th>Description</th>
 <th>Incomplete/Complete</th>
 </tr>
@@ -576,7 +576,7 @@ The template parameter `T` of `indirect_value` may be an incomplete type.
 ### X.Z.3 Class template `indirect_value` constructors [indirect_value.ctor]
 
 <code>constexpr indirect_value() noexcept;</code>
-* Remarks: The method shall work with incomplete pointer type for `T`.
+* Remarks: The function shall work with incomplete pointer type for `T`.
 * Effects: Constructs an empty `indirect_value`.
     * Postconditions: `bool(*this) == false`.
 
@@ -595,7 +595,7 @@ The template parameter `T` of `indirect_value` may be an incomplete type.
 <code>indirect_value(indirect_value&& p) noexcept;</code>
 * Effects: Move-constructs an `indirect_value` instance from `p`. If `p` has a custom copier and deleter then the copier and deleter of the `indirect_value` constructed are the same as those in `p`.
 * Postconditions: `*this` contains the old value of `p`. `p` is empty.
-* Remarks: The method shall work with incomplete pointer type for `T`.
+* Remarks: The function shall work with incomplete pointer type for `T`.
 
 <code>indirect_value(std::in_place_t, Ts&& ...ts);</code>
 * Effects: Constructs an `indirect_value` which owns an object of type `T` direct-non-list-initialized with `std::forward<Ts>(ts)...`
@@ -622,7 +622,7 @@ The template parameter `T` of `indirect_value` may be an incomplete type.
 ### X.Z.6 Class template `indirect_value` modifiers [indirect_value.modifiers]
 <code>void swap(indirect_value<T>& p) noexcept;</code>
 * Effects: Exchanges the contents of `p` and `*this`.
-* Remarks: The method shall work with incomplete pointer type for `T`.
+* Remarks: The function shall work with incomplete pointer type for `T`.
 
 ### X.Z.7 Class template `indirect_value` observers [indirect_value.observers]
 ```
@@ -638,11 +638,11 @@ const T* operator->() const noexcept;
 ```
 * Requires: `bool(*this)`.
 * Returns: A pointer to the owned object.
-* Remarks: The method shall work with incomplete pointer type for `T`.
+* Remarks: The function shall work with incomplete pointer type for `T`.
 
 <code>explicit operator bool() const noexcept;</code>
 * Returns: false if the `indirect_value` is empty, otherwise true.
-* Remarks: The method shall work with incomplete pointer type for `T`.
+* Remarks: The function shall work with incomplete pointer type for `T`.
 
 ### X.Z.8 Class template `indirect_value` creation [indirect_value.creation]
 
