Preconditions over requires/expects

--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -582,7 +582,7 @@ The template parameter `T` of `indirect_value` may be an incomplete type.
 
 <code>explicit indirect_value(T* p, C c=C{}, D d=D{});</code>
 * Effects: Creates an `indirect_value` object that owns the pointer `p`. If `p` is non-null then the copier and deleter of the `indirect_value` constructed are moved from `c` and `d`.
-* Requires: `C` and `D` satisfy the requirements of CopyConstructible. If the arguments `c` and/or `d` are not supplied, then `C` and/or `D` respectively are default constructible types that are not pointer types. If `p` is non-null then the expression `c(*p)` returns an object of type `T*`. The expression `d(p)` is well-formed, has well-defined behaviour, and does not throw exceptions.
+* Preconditions: `C` and `D` satisfy the requirements of CopyConstructible. If the arguments `c` and/or `d` are not supplied, then `C` and/or `D` respectively are default constructible types that are not pointer types. If `p` is non-null then the expression `c(*p)` returns an object of type `T*`. The expression `d(p)` is well-formed, has well-defined behaviour, and does not throw exceptions.
 * Postconditions: `bool(*this) == bool(p)`.
 * Remarks: A custom copier and deleter are said to be ‘present’ in a `indirect_value` initialised with this constructor.
 
@@ -600,7 +600,7 @@ The template parameter `T` of `indirect_value` may be an incomplete type.
 <code>indirect_value(std::in_place_t, Ts&& ...ts);</code>
 * Effects: Constructs an `indirect_value` which owns an object of type `T` direct-non-list-initialized with `std::forward<Ts>(ts)...`
 * Throws: Any exception thrown by the selected constructor of `T` or `bad_alloc` if required storage cannot be obtained.
-* Requires `is_same_v<C, default_copy> && is_same_v<D, default_delete>`.
+* Preconditions: `is_same_v<C, default_copy> && is_same_v<D, default_delete>`.
 
 ### X.Z.4 Class template `indirect_value` destructor [indirect_value.dtor]
 <code>~indirect_value();</code>
@@ -629,14 +629,14 @@ The template parameter `T` of `indirect_value` may be an incomplete type.
 T& operator*();
 const T& operator*() const;
 ```
-* Requires: `bool(*this)`.
+* Preconditions: `bool(*this)`.
 * Returns: A reference to the owned object.
 
 ```
 T* operator->() noexcept;
 const T* operator->() const noexcept;
 ```
-* Requires: `bool(*this)`.
+* Preconditions: `bool(*this)`.
 * Returns: A pointer to the owned object.
 * Remarks: The function shall work with incomplete pointer type for `T`.
 
@@ -652,9 +652,9 @@ template <class T, class U=T, class ...Ts> indirect_value<T>
 ```
 
 * Constraints: `is_constructible_v<U, Ts...>` is true.
-* Expects: `U` meets the `Cpp17CopyConstructible` requirements.
+* Preconditions: `U` meets the `Cpp17CopyConstructible` requirements.
 * Returns: A `indirect_value<T>` owning an object of type direct-non-list-initialized with `std::forward<Ts>(ts)...`.
-* Requires `is_same_v<C, default_copy> && is_same_v<D, default_delete>`.
+* Preconditions `is_same_v<C, default_copy> && is_same_v<D, default_delete>`.
 
 # Acknowledgements
 The authors would like to thank Thomas Russell, and Andrew Bennieston for useful discussions on the topic and the BSI panel for on-going support.
