Conversion to bool is true

--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -587,7 +587,7 @@ The template parameter `T` of `indirect_value` may be an incomplete type.
 * Postconditions: `bool(*this) == bool(p)`.
 
 <code>indirect_value(const indirect_value& p);</code>
-* Constraints: `is_copy_constructible_v<T>`
+* Constraints: `is_copy_constructible_v<T>` is true.
 * Effects: Creates a `indirect_value` object that owns a copy of the object managed by `p`. The copy is created by the copier in `p`. If `p` has a custom copier and deleter then the custom copier and deleter of the `indirect_value` constructed are copied from those in `p`.
 * Throws: Any exception thrown by the copier or `bad_alloc` if required storage cannot be obtained.
 * Postconditions: `bool(*this) == bool(p)`.
@@ -629,14 +629,14 @@ The template parameter `T` of `indirect_value` may be an incomplete type.
 T& operator*();
 const T& operator*() const;
 ```
-* Preconditions: `bool(*this)`.
+* Preconditions: `bool(*this)` is true.
 * Returns: A reference to the owned object.
 
 ```
 T* operator->() noexcept;
 const T* operator->() const noexcept;
 ```
-* Preconditions: `bool(*this)`.
+* Preconditions: `bool(*this)` is true.
 * Returns: A pointer to the owned object.
 * Remarks: The function shall work with incomplete pointer type for `T`.
 
@@ -654,7 +654,7 @@ template <class T, class U=T, class ...Ts> indirect_value<T>
 * Constraints: `is_constructible_v<U, Ts...>` is true.
 * Preconditions: `U` meets the `Cpp17CopyConstructible` requirements.
 * Returns: A `indirect_value<T>` owning an object of type direct-non-list-initialized with `std::forward<Ts>(ts)...`.
-* Preconditions `is_same_v<C, default_copy> && is_same_v<D, default_delete>`.
+* Preconditions: `is_same_v<C, default_copy> && is_same_v<D, default_delete>`.
 
 # Acknowledgements
 The authors would like to thank Thomas Russell, and Andrew Bennieston for useful discussions on the topic and the BSI panel for on-going support.
