--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -583,7 +583,7 @@ The template parameter `T` of `indirect_value` may be an incomplete type.
 <code>explicit indirect_value(T* p, C c=C{}, D d=D{});</code>
 * Effects: Creates an `indirect_value` object that owns the pointer `p`. If `p` is non-null then the copier and deleter of the `indirect_value` constructed are moved from `c` and `d`.
 * Remarks: A custom copier and deleter are said to be ‘present’ in a `indirect_value` initialised with this constructor.
-* Preconditions: `C` and `D` satisfy the requirements of CopyConstructible. If the arguments `c` and/or `d` are not supplied, then `C` and/or `D` respectively are default constructible types that are not pointer types. If `p` is non-null then the expression `c(*p)` returns an object of type `T*`. The expression `d(p)` is well-formed, has well-defined behaviour, and does not throw exceptions.
+* Preconditions: `C` and `D` meet the <i>Cpp17CopyConstructible</i> requirements. If the arguments `c` and/or `d` are not supplied, then `C` and/or `D` respectively are default constructible types that are not pointer types. If `p` is non-null then the expression `c(*p)` returns an object of type `T*`. The expression `d(p)` is well-formed, has well-defined behaviour, and does not throw exceptions.
 * Postconditions: `bool(*this) == bool(p)`.
 
 <code>indirect_value(const indirect_value& p);</code>
