--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -608,7 +608,7 @@ The template parameter `T` of `indirect_value` may be an incomplete type.
 
 ### X.Z.5 Class template `indirect_value` assignment [indirect_value.assignment]
 <code>indirect_value& operator=(const indirect_value& p);</code>
-* Constraints: `is_copy_assignable<T>`
+* Constraints: `is_copy_assignable<T>` is true.
 * Effects: `*this` owns a copy of the resource managed by `p`. If `p` has a custom copier and deleter then the copy is created by the copier in `p`, and the copier and deleter of `*this` are copied from those in `p`. Otherwise, the resource managed by `*this` is initialised by the copy constructor of the resource managed by `p`.
 * Throws: Any exception thrown by the copier or `bad_alloc` if required storage cannot be obtained.
 * Returns: `*this`.
