Allocator support plus version updates

--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -20,6 +20,12 @@ Add a class template, `indirect_value`, to the C++ Standard Library to support f
 
 # Change history
 
+Changes in P1950r2
+
+* Wording fixes.
+
+* Add allocator support.
+
 Changes in P1950r1
 
 * Add design discussion.
@@ -647,14 +653,24 @@ const T* operator->() const noexcept;
 ### X.Z.8 Class template `indirect_value` creation [indirect_value.creation]
 
 ```cpp
-template <class T, class U=T, class ...Ts> indirect_value<T>
-  make_indirect_value(Ts&& ...ts);
+template <class T, class U=T, class ...Ts>
+indirect_value<T> make_indirect_value(Ts&& ...ts);
 ```
 
 * Constraints: `is_constructible_v<U, Ts...>` is true.
 * Preconditions: `U` meets the `Cpp17CopyConstructible` requirements.
 * Returns: A `indirect_value<T>` owning an object of type direct-non-list-initialized with `std::forward<Ts>(ts)...`.
 * Preconditions: `is_same_v<C, default_copy> && is_same_v<D, default_delete>`.
+
+```cpp
+template <class T, class U = T, class A = std::allocator<U>, class... Ts>
+indirect_value<T> make_indirect_value(std::allocator_arg_t, A& a, Ts&&... ts)  
+```
+
+* Constraints: `is_constructible_v<U, Ts...>` is true.
+* Preconditions: `U` meets the `Cpp17CopyConstructible` requirements.
+* Returns: A `indirect_value<T>` owning an object of type direct-non-list-initialized with `std::forward<Ts>(ts)...`.
+* Preconditions `is_same_v<C, allocator_copy> && is_same_v<D, allocator_delete>`.
 
 # Acknowledgements
 The authors would like to thank Thomas Russell, and Andrew Bennieston for useful discussions on the topic and the BSI panel for on-going support.
