Add acknowledgement to contributors

--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -26,6 +26,10 @@ Changes in P1950r2
 
 * Add allocator support.
 
+* Add operator <=> support.
+
+* Add std::hash customization.
+
 Changes in P1950r1
 
 * Add design discussion.
@@ -270,6 +274,9 @@ Such a design would be inconsistent with the broader Standard Library design:
  `std::string`, `std::any`, `std::function` all permit a small object optimization but do not
  let users specify the size of the buffer.
 
+The size of the small buffer optimization could be deduced from the size of the underlying `T`,
+however, to do so breaks the requirement supporting incomplete types. Another way to address this
+is via allocator support, where there 
 
 ### How are allocators supported?
 
