--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -276,7 +276,8 @@ Such a design would be inconsistent with the broader Standard Library design:
 
 The size of the small buffer optimization could be deduced from the size of the underlying `T`,
 however, to do so breaks the requirement supporting incomplete types. Another way to address this
-is via allocator support, where there 
+is via allocator support, which delays the requirement to detect size to functions marked as not 
+supporting the incomplete requirement.  
 
 ### How are allocators supported?
 
@@ -590,7 +591,7 @@ The template parameter `T` of `indirect_value` may be an incomplete type.
 
 <code>constexpr indirect_value() noexcept;</code>
 * Effects: Constructs an empty `indirect_value`.
-* Remarks: The function shall work with incomplete pointer type for `T`.
+* Remarks: The constructor shall work with incomplete pointer type for `T`.
 * Postconditions: `bool(*this) == false`.
 
 <code>explicit indirect_value(T* p, C c=C{}, D d=D{});</code>
@@ -607,7 +608,7 @@ The template parameter `T` of `indirect_value` may be an incomplete type.
 
 <code>indirect_value(indirect_value&& p) noexcept;</code>
 * Effects: Move-constructs an `indirect_value` instance from `p`. If `p` has a custom copier and deleter then the copier and deleter of the `indirect_value` constructed are the same as those in `p`.
-* Remarks: The function shall work with incomplete pointer type for `T`.
+* Remarks: The constructor shall work with incomplete pointer type for `T`.
 * Postconditions: `*this` contains the old value of `p`. `p` is empty.
 
 <code>indirect_value(std::in_place_t, Ts&& ...ts);</code>
@@ -671,7 +672,7 @@ indirect_value<T> make_indirect_value(Ts&& ...ts);
 
 ```cpp
 template <class T, class U = T, class A = std::allocator<U>, class... Ts>
-indirect_value<T> make_indirect_value(std::allocator_arg_t, A& a, Ts&&... ts)  
+indirect_value<T> allocate_indirect_value(std::allocator_arg_t, A& a, Ts&&... ts)  
 ```
 
 * Constraints: `is_constructible_v<U, Ts...>` is true.
@@ -680,7 +681,8 @@ indirect_value<T> make_indirect_value(std::allocator_arg_t, A& a, Ts&&... ts)
 * Preconditions `is_same_v<C, allocator_copy> && is_same_v<D, allocator_delete>`.
 
 # Acknowledgements
-The authors would like to thank Thomas Russell, and Andrew Bennieston for useful discussions on the topic and the BSI panel for on-going support.
+Contributions to the open source reference implementation have forwarded the design, including but not limited to contribution from Kilian Henneberger, Ed Catmur, Stephen Kelly & Malcolm Parsons.
+The authors would like to thank Thomas Russell for the original suggestions of allocator support, Bengt Gustafsson for useful discussion on SBO and nullstate representation via std::optional specialisation, Jonathan Wakely & Daniel Krügler for document reviews, Andrew Bennieston for useful discussions on the topic and the BSI panel for on-going support.
 
 # References
 
