Add clarrification to wording of indirect_value around presentness of copier and deleter

--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -537,6 +537,8 @@ The template parameter `T` of `indirect_value` must be a non-union class type.
 
 The template parameter `T` of `indirect_value` may be an incomplete type.
 
+A copier and deleter are said to be present if a `indirect_value` object is constructed from a non-null pointer, or from a `indirect_value` object where a copier and deleter are present.
+
 *[Note: Implementations are encouraged to avoid the use of dynamic memory for ownership of small objects.]*
 
 ### X.Z.2 Class template `indirect_value` synopsis [indirect_value.synopsis]
