Correct language in destructor effects

--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -620,7 +620,7 @@ A copier and deleter are said to be present if a `indirect_value` object is cons
 
 ### X.Z.4 Class template `indirect_value` destructor [indirect_value.dtor]
 <code>~indirect_value();</code>
-* Effects: If `get() == nullptr` there are no effects. If a custom deleter `d` is present then `d(p)` is called and the copier and deleter are destroyed. Otherwise the destructor of the managed object is called.
+* Effects: If `*this` there are no effects. If a custom deleter `d` is present then `d(p)` is called and the copier and deleter are destroyed. Otherwise the destructor of the managed object is called.
 
 ### X.Z.5 Class template `indirect_value` assignment [indirect_value.assignment]
 <code>indirect_value& operator=(const indirect_value& p);</code>
