--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -593,7 +593,6 @@ A copier and deleter are said to be present if a `indirect_value` object is cons
 
 <code>constexpr indirect_value() noexcept;</code>
 * Effects: Constructs an empty `indirect_value`.
-* Remarks: The constructor shall work with incomplete pointer type for `T`.
 * Postconditions: `bool(*this) == false`.
 
 <code>explicit indirect_value(T* p, C c=C{}, D d=D{});</code>
@@ -605,12 +604,12 @@ A copier and deleter are said to be present if a `indirect_value` object is cons
 <code>indirect_value(const indirect_value& p);</code>
 * Constraints: `is_copy_constructible_v<T>` is true.
 * Effects: Creates a `indirect_value` object that owns a copy of the object managed by `p`. The copy is created by the copier in `p`. If `p` has a custom copier and deleter then the custom copier and deleter of the `indirect_value` constructed are copied from those in `p`.
+* Remarks: The constructor must work with pointer to an complete type `T`.
 * Throws: Any exception thrown by the copier or `bad_alloc` if required storage cannot be obtained.
 * Postconditions: `bool(*this) == bool(p)`.
 
 <code>indirect_value(indirect_value&& p) noexcept;</code>
 * Effects: Move-constructs an `indirect_value` instance from `p`. If `p` has a custom copier and deleter then the copier and deleter of the `indirect_value` constructed are the same as those in `p`.
-* Remarks: The constructor shall work with incomplete pointer type for `T`.
 * Postconditions: `*this` contains the old value of `p`. `p` is empty.
 
 <code>indirect_value(std::in_place_t, Ts&& ...ts);</code>
@@ -621,24 +620,26 @@ A copier and deleter are said to be present if a `indirect_value` object is cons
 ### X.Z.4 Class template `indirect_value` destructor [indirect_value.dtor]
 <code>~indirect_value();</code>
 * Effects: If `*this` there are no effects. If a custom deleter `d` is present then `d(p)` is called and the copier and deleter are destroyed. Otherwise the destructor of the managed object is called.
+* Remarks: The constructor must work with pointer to an complete type `T`.
 
 ### X.Z.5 Class template `indirect_value` assignment [indirect_value.assignment]
 <code>indirect_value& operator=(const indirect_value& p);</code>
 * Constraints: `is_copy_assignable_v<T>` is true.
 * Effects: `*this` owns a copy of the resource managed by `p`. If `p` has a custom copier and deleter then the copy is created by the copier in `p`, and the copier and deleter of `*this` are copied from those in `p`. Otherwise, the resource managed by `*this` is initialised by the copy constructor of the resource managed by `p`.
+* Remarks: The function must work with pointer to an complete type `T`.
 * Throws: Any exception thrown by the copier or `bad_alloc` if required storage cannot be obtained.
 * Returns: `*this`.
 * Postconditions: `bool(*this) == bool(p)`.
 
 <code>indirect_value& operator=(indirect_value&& p) noexcept;</code>
 * Effects: Ownership of the resource managed by `p` is transferred to this. If `p` has a custom copier and deleter then the copier and deleter of `*this` is the same as those in `p`.
+* Remarks: The function must work with pointer to an complete type `T`.
 * Returns: `*this`.
 * Postconditions: `*this` contains the old value of `p`. `p` is empty.
 
 ### X.Z.6 Class template `indirect_value` modifiers [indirect_value.modifiers]
 <code>void swap(indirect_value<T>& p) noexcept;</code>
 * Effects: Exchanges the contents of `p` and `*this`.
-* Remarks: The function shall work with incomplete pointer type for `T`.
 
 ### X.Z.7 Class template `indirect_value` observers [indirect_value.observers]
 ```
@@ -654,11 +655,9 @@ const T* operator->() const noexcept;
 ```
 * Preconditions: `bool(*this)` is true.
 * Returns: A pointer to the owned object.
-* Remarks: The function shall work with incomplete pointer type for `T`.
 
 <code>explicit operator bool() const noexcept;</code>
 * Returns: false if the `indirect_value` is empty, otherwise true.
-* Remarks: The function shall work with incomplete pointer type for `T`.
 
 ### X.Z.8 Class template `indirect_value` creation [indirect_value.creation]
 
