Add clarrifying constraints

--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -624,7 +624,7 @@ A copier and deleter are said to be present if a `indirect_value` object is cons
 
 ### X.Z.5 Class template `indirect_value` assignment [indirect_value.assignment]
 <code>indirect_value& operator=(const indirect_value& p);</code>
-* Constraints: `is_copy_assignable_v<T>` is true.
+* Constraints: `is_copy_assignable_v<C>` is true. `is_copy_assignable_v<D>` is true.
 * Effects: `*this` owns a copy of the resource managed by `p`. If `p` has a custom copier and deleter then the copy is created by the copier in `p`, and the copier and deleter of `*this` are copied from those in `p`. Otherwise, the resource managed by `*this` is initialised by the copy constructor of the resource managed by `p`.
 * Remarks: The function must work with pointer to an complete type `T`.
 * Throws: Any exception thrown by the copier or `bad_alloc` if required storage cannot be obtained.
@@ -632,6 +632,7 @@ A copier and deleter are said to be present if a `indirect_value` object is cons
 * Postconditions: `bool(*this) == bool(p)`.
 
 <code>indirect_value& operator=(indirect_value&& p) noexcept;</code>
+* Constraints: `is_nothrow_move_assignable_v<C>` is true. `is_nothrow_move_assignable_v<D>` is true.
 * Effects: Ownership of the resource managed by `p` is transferred to this. If `p` has a custom copier and deleter then the copier and deleter of `*this` is the same as those in `p`.
 * Remarks: The function must work with pointer to an complete type `T`.
 * Returns: `*this`.
