--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -625,7 +625,7 @@ A copier and deleter are said to be present if a `indirect_value` object is cons
 ### X.Z.5 Class template `indirect_value` assignment [indirect_value.assignment]
 <code>indirect_value& operator=(const indirect_value& p);</code>
 * Constraints: `is_copy_assignable_v<C>` is true. `is_copy_assignable_v<D>` is true.
-* Effects: `*this` owns a copy of the resource managed by `p`. If `p` has a custom copier and deleter then the copy is created by the copier in `p`, and the copier and deleter of `*this` are copied from those in `p`. Otherwise, the resource managed by `*this` is initialised by the copy constructor of the resource managed by `p`.
+* Effects: If `p` is empty, assigns an empty object. Otherwise creates an object that owns a copy of the object managed by `p`. If `p` has a custom copier and deleter then the copy is created by the copier in `p`, and the copier and deleter of `*this` are copied from those in `p`. Otherwise, the resource managed by `*this` is initialised by the copy constructor of the resource managed by `p`.
 * Remarks: The function must work with pointer to an complete type `T`.
 * Throws: Any exception thrown by the copier or `bad_alloc` if required storage cannot be obtained.
 * Returns: `*this`.
