Update reference to polymorphic_value

--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -688,7 +688,7 @@ The authors would like to thank Thomas Russell for the original suggestions of a
 
 # References
 
-[J. Coe] [p0201r3: A polymorphic value-type for C++](http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2018/p0201r3.pdf)
+[J. Coe] [p0201r5: A polymorphic value-type for C++](https://www.open-std.org/jtc1/sc22/wg21/docs/papers/2019/p0201r5.html)
 
 [J. Coplien] Advanced C++ Programming Styles and Idioms (Addison-Wesley), James O. Coplien, 1992
 
