Cross reference std::default_copy

--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -515,7 +515,7 @@ namespace std {
     };
 } // namespace std
 ```
-The class template default_copy serves as the default copier for the class template `indirect_value`.
+The class template default_copy [J. Coe] serves as the default copier for the class template `indirect_value`.
 The template parameter <code>T</code> of <code>default_copy</code> may be an incomplete type.
 
 <code>T* operator()(const T& t) const;</code>
