--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -596,8 +596,9 @@ A copier and deleter are said to be present if a `indirect_value` object is cons
 * Postconditions: `bool(*this) == false`.
 
 <code>explicit indirect_value(T* p, C c=C{}, D d=D{});</code>
-* Effects: Creates an `indirect_value` object that owns the pointer `p`. If `p` is non-null then the copier and deleter of the `indirect_value` constructed are moved from `c` and `d`.
+* Effects: Creates an `indirect_value` object that owns the pointer `p`. If `p` is non-null then the copier and deleter of the `indirect_value` constructed are moved from `c` and `d`. If `p` is null, creates an empty object.
 * Remarks: A custom copier and deleter are said to be ‘present’ in a `indirect_value` initialised with this constructor.
+* Constraints: `is_nothrow_move_assignable_v<C>` is true. `is_nothrow_move_assignable_v<D>` is true.
 * Preconditions: `C` and `D` meet the <i>Cpp17CopyConstructible</i> requirements. If the arguments `c` and/or `d` are not supplied, then `C` and/or `D` respectively are default constructible types that are not pointer types. If `p` is non-null then the expression `c(*p)` returns an object of type `T*`. The expression `d(p)` is well-formed, has well-defined behaviour, and does not throw exceptions.
 * Postconditions: `bool(*this) == bool(p)`.
 
