Add required text for mem.synopsis

--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -491,6 +491,25 @@ This proposal is a pure library extension. It requires additions to be made to t
 
 # Technical specifications
 
+## Additions in [memory.syn] 20.2.2:
+
+```
+// [indirect.value], class template indirect_value
+template <class T> struct default_copy; 
+template <class T> struct copier_traits;
+
+template <class T, class C = std::default_copy<T>, class D = typename std::copier_traits<C>::deleter_type> class indirect_value;
+
+template <class T, class ...Ts> 
+  indirect_value<T> make_indirect_value(Ts&& ...ts); 
+
+template <class T, class A = std::allocator<T>, class... Ts>
+  indirect_value<T> allocate_indirect_value(std::allocator_arg_t, A& a, Ts&&... ts); 
+
+template<class T>
+  void swap(indirect_value<T>& p, indirect_value<T>& u) noexcept;
+```
+
 ## X.X Class template `copier_traits` [copier.traits]
 ```
 namespace std {
@@ -580,6 +599,9 @@ A copier and deleter are said to be present if a `indirect_value` object is cons
     // indirect_value creation
     template <class T, class ...Ts> indirect_value<T>
     make_indirect_value(Ts&& ...ts);  // See below
+
+    template <class T, class A = std::allocator<T>, class... Ts>
+    indirect_value<T> allocate_indirect_value(std::allocator_arg_t, A& a, Ts&&... ts); 
 
     // indirect_value specialized algorithms
     template<class T>
@@ -675,7 +697,7 @@ indirect_value<T> make_indirect_value(Ts&& ...ts);
 
 ```cpp
 template <class T, class U = T, class A = std::allocator<U>, class... Ts>
-indirect_value<T> allocate_indirect_value(std::allocator_arg_t, A& a, Ts&&... ts)  
+indirect_value<T> allocate_indirect_value(std::allocator_arg_t, A& a, Ts&&... ts); 
 ```
 
 * Constraints: `is_constructible_v<U, Ts...>` is true.
