Reference Carbon's implementation of indirect_value

--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -301,7 +301,7 @@ deleter and using the pointer constructor `indirect_value(T* t, C c, D d)`.
 There have been previous proposal for deep-copying smart pointers that proposed copy semantics [W. Brown]. <code>cloned_ptr</code> was proposed in [J. Coe], however under guidance of LEWG this was renamed to <code>polymorphic_value</code>.  With this change in name came the addition of const propagation.
 
 This paper is not unique in these ideas. GitHub code search finds 602k lines of code referencing "PImpl" and 99 C
-++ repositories claiming to provide generic implementations of Pimpl.  Additionally other authors have addressed this
+++ repositories claiming to provide generic implementations of Pimpl.  Google Carbon Language, an experimental successor to C++ includes `IndirectValue` as a vocabulary type. Additionally other authors have addressed this
  topic [A. Upadyshev].  Some generic implementations of note in the wild are:
 
 <table>
@@ -314,6 +314,12 @@ This paper is not unique in these ideas. GitHub code search finds 602k lines of 
 </tr>
 </thead>
 <tbody>
+<tr>
+<td>Carbon Language</td>
+<td>https://github.com/carbon-language/carbon-lang/blob/trunk/common/indirect_value.h</td>
+<td>Yes</td>
+<td>Yes</td>
+</tr>
 <tr>
 <td>Boost Pimpl</td>
 <td>https://github.com/sean-/boost-pimpl</td>
