Add note on allocators

--- a/documentation/p1950.md
+++ b/documentation/p1950.md
@@ -26,10 +26,6 @@ Changes in P1950r2
 
 * Add allocator support.
 
-* Add operator <=> support.
-
-* Add std::hash customization.
-
 Changes in P1950r1
 
 * Add design discussion.
@@ -293,9 +289,7 @@ The in-place constructor of `indirect_value<T>` uses `new` to create an instance
 constructor argument. This constructor is disabled where the copier and deleter are not `default_copy` and
 `default_delete`.
 
-Memory management for `indirect_value` can be fully controlled by specifying a suitable copier and
-deleter and using the pointer constructor `indirect_value(T* t, C c, D d)`.
-
+Memory management for `indirect_value` can be fully controlled via the `allocate_indirect_value` function which allows passing in an allocator to control the source of memory.  Custom copier and deleter then use the allocator for allocations and deallocations.
 
 ## Prior Art
 There have been previous proposal for deep-copying smart pointers that proposed copy semantics [W. Brown]. <code>cloned_ptr</code> was proposed in [J. Coe], however under guidance of LEWG this was renamed to <code>polymorphic_value</code>.  With this change in name came the addition of const propagation.
@@ -734,3 +728,5 @@ The authors would like to thank Thomas Russell for the original suggestions of a
 [S. Meyers] Effective Modern C++, Item 22: When using the Pimpl Idiom, define special member functions in the implementation file, Scott Meyers, 2014
 
 [W. Brown] [n3339: A Preliminary Proposal for a Deep-Copying Smart Pointer, Walter E. Brown, 2012](open-std.org/jtc1/sc22/wg21/docs/papers/2012/n3339.pdf)
+
+[M. Knejp][P0316R0: allocate_unique and allocator_delete](https://www.open-std.org/jtc1/sc22/wg21/docs/papers/2017/p0316r0.html)
